--- a/(Лекция 1) Введение в Pandas.ipynb
+++ b/(Лекция 1) Введение в Pandas.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 1,
    "metadata": {
     "scrolled": true
    },
@@ -97,16 +97,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(<NA>, None, nan)"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "pd.NA, None, np.nan"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +133,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -134,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -143,7 +154,7 @@
        "15.0"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -154,7 +165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -170,7 +181,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -182,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -198,7 +209,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4475,7 +4486,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.8.5"
   },
   "name": "seminar02_part2_pandas.ipynb"
  },
